--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -3,7 +3,7 @@
 
 {% block javascript %}
   <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/task1.js' %}"></script>
 {% endblock %}
 
 {% block css %}
