--- a/django_celery/templates/pages/task3.html
+++ b/django_celery/templates/pages/task3.html
@@ -3,7 +3,7 @@
 
 {% block javascript %}
   <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/task3.js' %}"></script>
 {% endblock %}
 
 {% block css %}
@@ -18,7 +18,7 @@
       <h1 class="title">Task 1</h1>
       <hr><br>
       <div>
-        <h2 class="title">#1</h2>
+        <h2 class="title">#3</h2>
         <h3>Choose a task:</h3>
         <br>
         <div class="field is-grouped">
