--- a/django_celery/templates/base.html
+++ b/django_celery/templates/base.html
@@ -1,53 +1,114 @@
 {% load static i18n %}<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Django Celery{% endblock title %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample Django">
-    <meta name="author" content="AnhLT">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>{% block title %}Django Celery{% endblock title %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Sample Django">
+  <meta name="author" content="AnhLT">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
 
-    {% block css %}
-    <!-- Latest compiled and minified Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="{% static 'css/main.css' %}" rel="stylesheet">
-    <link href="{% static 'css/util.css' %}" rel="stylesheet">
-    {% endblock %}
+  <!-- Latest compiled and minified Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="{% static 'css/main.css' %}" rel="stylesheet">
+  <style>
+    .navbar-nav.navbar-center {
+      position: absolute;
+      left: 50%;
+      transform: translatex(-50%);
+    }
+  </style>
+  {% block css %}
+  {% endblock %}
 
-  </head>
+</head>
 
-  <body>
-    {% block navbar %}
-    {% endblock %}
+<body>
 
+{% block navbar %}
+  <!--NAVBAR STARTING-->
+  <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <div class="container">
+      <a class="navbar-brand text-success" href="{% url "home" %}">
+        Django Celery
+      </a>
+      <button class="navbar-toggler" type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      {% if messages %}
-          {% for message in messages %}
-              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-          {% endfor %}
-      {% endif %}
+      <div class="collapse navbar-collapse"
+           id="navbarSupportedContent">
+        <ul class=" nav navbar-nav navbar-center">
+          <li class="nav-item">
+            <a class="nav-link" href={% url "celery_tasks:task1" %}>
+              task 1
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href={% url "celery_tasks:task2" %}>
+              task 2
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href={% url "celery_tasks:task3" %}>
+              task 3
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+{% endblock %}
 
-      {% block content %}
-      {% endblock content %}
+<div class="container">
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+      </div>
+    {% endfor %}
+  {% endif %}
 
-    </div> <!-- /container -->
+  {% block content %}
+  {% endblock content %}
 
-    {% block modal %}{% endblock modal %}
+  {% block footer %}
+    <footer class="footer">
+    <div class="content container">
+      <hr>
+      <p><small><span class="text-muted">© <a href="">ANHLT</a></span></small></p>
+    </div>
+    </footer>
+  {% endblock %}
+</div>
 
-    {% block javascript %}
+{% block modal %}{% endblock modal %}
 
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+{% block javascript %}
 
-      <script src="{% static 'js/project.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+          integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+          crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+          crossorigin="anonymous"></script>
 
-    {% endblock javascript %}
-  </body>
+  <script src="{% static 'js/project.js' %}"></script>
+
+{% endblock javascript %}
+</body>
 </html>
 
