--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -24,17 +24,17 @@
         <div class="field is-grouped">
           <p class="control">
             <button class="button is-primary">Random</button>
-            <button class="button is-primary" sleep_time="1">Short</button>
-            <button class="button is-primary" sleep_time="2">Medium</button>
-            <button class="button is-primary" sleep_time="3">Long</button>
+            <button class="button is-primary" sleep_time="2">Short</button>
+            <button class="button is-primary" sleep_time="4">Medium</button>
+            <button class="button is-primary" sleep_time="6">Long</button>
           </p>
         </div>
         <div class="field is-grouped">
           <p class="control">
-            <button class="button is-primary" sleep_time="1">Random</button>
-            <button class="button is-primary" sleep_time="1">Short</button>
-            <button class="button is-primary" sleep_time="2">Medium</button>
-            <button class="button is-primary" sleep_time="3">Long</button>
+            <button class="button is-primary" sleep_time="">Random</button>
+            <button class="button is-primary" sleep_time="2">Short</button>
+            <button class="button is-primary" sleep_time="4">Medium</button>
+            <button class="button is-primary" sleep_time="6">Long</button>
           </p>
         </div>
       </div>
