--- a/django_celery/static/css/main.css
+++ b/django_celery/static/css/main.css
@@ -525,6 +525,12 @@ th, td {
 
 footer {
   background-color: white !important;
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background: grey;
 }
 
 .alert-debug {
