--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -7,43 +7,40 @@
 {% endblock %}
 
 {% block css %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bulma.min.css' %}">
-  <link href="{% static 'css/util.css' %}" rel="stylesheet">
+  <link href="{% static 'css/task1.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-<section class="section">
   <div class="container">
-    <div class="column is-two-thirds">
-      <h1 class="title">Task 1</h1>
-      <hr><br>
-      <div>
-        <h2 class="title">#1</h2>
-        <h3>Choose a task:</h3>
+    <section class="section">
+      <div class="column">
+        <h1 class="title">Task 1</h1>
+        <hr>
         <br>
-        <div class="field is-grouped">
-          <p class="control">
-            <button class="button is-primary">Random</button>
-            <button class="button is-primary" sleep_time="2">Short</button>
-            <button class="button is-primary" sleep_time="4">Medium</button>
-            <button class="button is-primary" sleep_time="6">Long</button>
-          </p>
+        <div>
+          <h2 class="title">#1</h2>
+          <h3>Choose a task:</h3>
+          <br>
+          <div class="field is-grouped">
+            <p class="control">
+              <button class="button is-primary">Random</button>
+              <button class="button is-primary" sleep_time="2">Short</button>
+              <button class="button is-primary" sleep_time="4">Medium</button>
+              <button class="button is-primary" sleep_time="6">Long</button>
+            </p>
+          </div>
+          <div class="field is-grouped">
+            <p class="control">
+              <button class="button is-primary" sleep_time="">Random</button>
+              <button class="button is-primary" sleep_time="2">Short</button>
+              <button class="button is-primary" sleep_time="4">Medium</button>
+              <button class="button is-primary" sleep_time="6">Long</button>
+            </p>
+          </div>
         </div>
-        <div class="field is-grouped">
-          <p class="control">
-            <button class="button is-primary" sleep_time="">Random</button>
-            <button class="button is-primary" sleep_time="2">Short</button>
-            <button class="button is-primary" sleep_time="4">Medium</button>
-            <button class="button is-primary" sleep_time="6">Long</button>
-          </p>
-        </div>
+        <br><br>
+        <div id="task_result_table"></div>
       </div>
-      <br><br>
-      <div id="task_result_table">
-
-      </div>
-
-    </div>
+    </section>
   </div>
-</section>
 {% endblock %}
