--- a/django_celery/templates/base.html
+++ b/django_celery/templates/base.html
@@ -15,13 +15,9 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="{% static 'css/main.css' %}" rel="stylesheet">
-  <style>
-    .navbar-nav.navbar-center {
-      position: absolute;
-      left: 50%;
-      transform: translatex(-50%);
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bulma.min.css' %}">
+  <link href="{% static 'css/util.css' %}" rel="stylesheet">
+
   {% block css %}
   {% endblock %}
 
@@ -69,30 +65,28 @@
   </nav>
 {% endblock %}
 
-<div class="container">
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                aria-hidden="true">&times;</span></button>
-      </div>
-    {% endfor %}
-  {% endif %}
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+    </div>
+  {% endfor %}
+{% endif %}
 
-  {% block content %}
-  {% endblock content %}
+{% block content %}
+{% endblock content %}
 
-  {% block footer %}
-    <footer class="footer">
+{% block modal %}{% endblock modal %}
+
+{% block footer %}
+  <footer class="footer">
     <div class="content container">
       <hr>
       <p><small><span class="text-muted">© <a href="">ANHLT</a></span></small></p>
     </div>
-    </footer>
-  {% endblock %}
-</div>
-
-{% block modal %}{% endblock modal %}
+  </footer>
+{% endblock %}
 
 {% block javascript %}
 
