--- a/django_celery/templates/pages/task2.html
+++ b/django_celery/templates/pages/task2.html
@@ -6,15 +6,12 @@
   <script type="text/javascript" src="{% static 'js/task2.js' %}"></script>
 {% endblock %}
 
-{% block css %}
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bulma.min.css' %}">
-  <link href="{% static 'css/util.css' %}" rel="stylesheet">
-{% endblock %}
+{% block css %}{% endblock %}
 
 {% block content %}
-  <section class="section">
-    <div class="container">
-      <div class="column is-two-thirds">
+  <div class="container">
+    <section class="section">
+      <div class="column">
         <h1 class="title">Task 2</h1>
         <hr>
         <br>
@@ -23,26 +20,36 @@
           <div class="row">
             <div class="col-md-8">
               <div class="content-inner">
-                <div class="label-counter" id="page-top">
-                  <a href="#">Users count: </a>
-                  <span id="users_count">...</span>
+                <div class="label-counter">
+                  Total users:
+                  <span style="color:#aaa" id="total">...</span>
+                </div>
+                <div class="label-counter">
+                  Admin users:
+                  <span id="superuser">...</span>
+                </div>
+                <div class="label-counter">
+                  Staff users:
+                  <span style="color:#8ACA2B" id="staffuser">...</span>
                 </div>
                 <div style="font-size:13px; color:#999">Last updated:
                   <span style="font-size:13px; color:#999" id="users_update_time"></span>
                 </div>
+              </div>
             </div>
           </div>
         </div>
-        </div>
         <br><br>
 
-        <hr><br>
+        <hr>
+        <br>
         <div>
           <h2 class="title">#2</h2>
           <div class="row">
             <div class="col-md-8">
               <div class="content-inner">
-                <div class="label-counter" id="page-top"><a href="#">World</a> / <a href="#">Countries</a> / <a href="#">Vietnam</a>
+                <div class="label-counter" id="page-top"><a href="#">World</a> / <a href="#">Countries</a> / <a
+                        href="#">Vietnam</a>
                 </div>
                 <div style="font-size:13px; color:#999">Last updated:
                   <span style="font-size:13px; color:#999" id="covid_update_time">...</span>
@@ -61,8 +68,8 @@
                 </div>
                 <div id="maincounter-wrap" style="margin-top:15px;">
                   <h1>Recovered:</h1>
-                  <div class="maincounter-number" style="color:#8ACA2B ">
-                    <span id="covid_recovered">...</span>
+                  <div class="maincounter-number">
+                    <span style="color:#8ACA2B" id="covid_recovered">...</span>
                   </div>
                 </div>
                 <div style="margin-top:50px;"></div>
@@ -70,8 +77,7 @@
             </div>
           </div>
         </div>
-        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </div>
 {% endblock %}
