--- a/django_celery/templates/pages/task3.html
+++ b/django_celery/templates/pages/task3.html
@@ -31,7 +31,8 @@
             </ul>
             <br>
             <br>
-            <button class="button is-primary" sleep_time="">Run</button>
+            <button class="button is-primary">Run</button>
+            <button class="button is-secondary" disabled>Cancel</button>
             <br>
           </div>
         <div id="task_result_table"></div>
