--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -23,7 +23,7 @@
           <br>
           <div class="field is-grouped">
             <p class="control">
-              <button class="button is-primary">Random</button>
+              <button class="button is-primary">Nomal</button>
               <button class="button is-primary" sleep_time="2">Short</button>
               <button class="button is-primary" sleep_time="4">Medium</button>
               <button class="button is-primary" sleep_time="6">Long</button>
@@ -31,10 +31,10 @@
           </div>
           <div class="field is-grouped">
             <p class="control">
-              <button class="button is-primary" sleep_time="">Random</button>
-              <button class="button is-primary" sleep_time="2">Short</button>
-              <button class="button is-primary" sleep_time="4">Medium</button>
-              <button class="button is-primary" sleep_time="6">Long</button>
+              <button class="button is-primary">Celery</button>
+              <button class="button is-primary celery" sleep_time="2">Short</button>
+              <button class="button is-primary celery" sleep_time="4">Medium</button>
+              <button class="button is-primary celery" sleep_time="6">Long</button>
             </p>
           </div>
         </div>
