--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -31,7 +31,7 @@
           </div>
           <div class="field is-grouped">
             <p class="control">
-              <button class="button is-primary">Celery</button>
+              <button class="button is-primary">&nbsp;Celery</button>
               <button class="button is-primary celery" sleep_time="2">Short</button>
               <button class="button is-primary celery" sleep_time="4">Medium</button>
               <button class="button is-primary celery" sleep_time="6">Long</button>
