--- a/django_celery/templates/pages/task1.html
+++ b/django_celery/templates/pages/task1.html
@@ -18,8 +18,7 @@
         <hr>
         <br>
         <div>
-          <h2 class="title">#1</h2>
-          <h3>Choose a task:</h3>
+          <h2>#1: Without celery</h2>
           <br>
           <div class="field is-grouped">
             <p class="control">
@@ -29,6 +28,10 @@
               <button class="button is-primary" sleep_time="6">Long</button>
             </p>
           </div>
+          <br>
+          <hr>
+          <h2>#2: With celery</h2>
+          <br>
           <div class="field is-grouped">
             <p class="control">
               <button class="button is-primary">&nbsp;Celery</button>
@@ -38,7 +41,8 @@
             </p>
           </div>
         </div>
-        <br><br>
+        <br>
+        <hr>
         <div id="task_result_table"></div>
       </div>
     </section>
