--- a/django_celery/templates/base.html
+++ b/django_celery/templates/base.html
@@ -44,26 +44,13 @@
       <div class="collapse navbar-collapse"
            id="navbarSupportedContent">
         <ul class=" nav navbar-nav navbar-center">
+          {% for i in "12345"|make_list %}
           <li class="nav-item">
-            <a class="nav-link" href={% url "celery_tasks:task1" %}>
-              task 1
+            <a class="nav-link" href={% url "celery_tasks:task"|add:i %}>
+              task {{ i }}
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href={% url "celery_tasks:task2" %}>
-              task 2
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href={% url "celery_tasks:task3" %}>
-              task 3
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href={% url "celery_tasks:task4" %}>
-              task 4
-            </a>
-          </li>
+          {% endfor %}
         </ul>
       </div>
     </div>
@@ -92,18 +79,6 @@
     </div>
   </footer>
 {% endblock %}
-
-
-{#<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"#}
-{#        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"#}
-{#        crossorigin="anonymous"></script>#}
-{#<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"#}
-{#        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"#}
-{#        crossorigin="anonymous"></script>#}
-{#<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"#}
-{#        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"#}
-{#        crossorigin="anonymous"></script>#}
-{#<script src="{% static 'js/main.js' %}"></script>#}
 
 {% block javascript %}
 {% endblock javascript %}
